# imdb-scraping

./: main.py  new_template.html  pyproject.toml  template.html
data/: movies_details_1900.json  movies_details_2024.json  movies_list_1900.json  movies_list_1901.json  movies_list_1910.json  movies_list_1920.json  movies_list_1930.json  movies_list_1940.json  movies_list_1950.json  movies_list_1960.json  movies_list_2024.json
imdb_scraping/: __init__.py  imdb_movies.py  items.py  middlewares.py  pipelines.py  settings.py
imdb_scraping/spiders/: __init__.py  imdb.py
imdb_scraping_scrapy/: settings.py
imdb_scraping_scrapy/spiders/: imdb.py
imdb_scraping_selenium/: imdb.py
imdb_urls/: __init__.py  imdb_movies.ipynb  imdb_movies.py  movies_list_2024.json  movies_list_year_2024.html
