[tool.poetry]
name = "imdb-scraping"
version = "0.1.0"
description = ""
authors = ["gaurav-gaikwad-12071998 <122888092+gaurav-gaikwad-12071998@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
selenium = "^4.23.1"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.2"
chromedrivermanager = "^0.0.1"
scrapy-splash = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
